--- a/src/components/molecules/teaseRecording.module.scss
+++ b/src/components/molecules/teaseRecording.module.scss
@@ -4,7 +4,6 @@
 	position: relative;
 	flex-grow: 1;
 	display: flex;
-	max-height: fit-content;
 }
 
 $container-padding: 16px;
